# vispy

./: .coveragerc  .git-blame-ignore-revs  .git_archival.txt  .gitattributes  .github_changelog_generator  .gitignore  .gitmodules  .pre-commit-config.yaml  .spyderproject  .travis.yml  CHANGELOG.md  CITATION.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  INSTALL  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  ROADMAP.md  TODO  __init__.py  _link_vispy.py  appveyor.yml  azure-pipelines.yml  colormaps.ipynb  info.py  make.py  nosetests.py  postactivate  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements-osx.txt  requirements.txt  requirements_osx.txt  (+9 more)
.devcontainer/: Dockerfile  devcontainer.json  py39.yml
ci/: build_website.sh  vispy_travis_website_upload.enc
codegen/: annotations.py  createglapi.py  get-deprecated.py  headerparser.py
dev/: disc_collection.py  visual_experiments.py
doc/: .gitignore  .requirements  CNAME  Makefile  README.rst  api-app.rst  api-gloo.rst  api-util.rst  app.rst  classic.rst  color.rst  community.rst  conf.py  dev-api.rst  dev-architecture.rst  dev-gloo.rst  dev-modern-gl.rst  event.rst  examplesgenerator.py  faq.rst  geometry.rst  glapigenerator.py  gloo-api.rst  gloo.rst  index.rst  installation.rst  io.rst  make.bat  mpl_plot.rst  news.rst  oogl.rst  opengl.rst  overview.rst  plot.rst  raspberry.rst  releasenotes.rst  resources.rst  roadmap.rst  scene.rst  tech-antialiasing.rst  (+12 more)
examples/: README.rst  app-event.py  app-glut.py  app-pyglet.py  app-qt.py  app.py  (+31 more)
(+1624 files in other folders)
