[build-system]
requires = [
    "setuptools>=69.4.0",
    # see https://numpy.org/devdocs/dev/depending_on_numpy.html#numpy-2-0-specific-advice
    "numpy>=2.0.0",
    "setuptools_scm[toml]>=8.1",
    "Cython>=3.0.0"
]

[tools.setuptools_scm]
write_to = "vispy/version.py"
local_scheme = "dirty-tag"


[tool.cibuildwheel]
skip = "pp* *-win32 *-manylinux_i686 *-musllinux*"
test-command = "python -c \"import vispy; vispy.test('nobackend')\""
test-extras = ["test"]


[tool.cibuildwheel.linux]
before-all = [
    "yum install -y fontconfig || apk add fontconfig-dev jpeg-dev; pip install freetype-py",
]

[tool.cibuildwheel.windows]
environment = {FREETYPEPY_BUNDLE_FT=1}
